# gradedmodal

./: Cargo.toml  todo.txt
app/: package-lock.json  package.json
app/src/: App.css  App.jsx
eval/: problem.p  problem2.p  template.json
src/: algo.txt  api.rs  b5.rs  cli.rs  depth1.rs  dnf.rs  eg.txt  flatformula.rs  formula.rs  formula2.rs  frame.rs  ilp.rs  k4.rs  k45.rs  k5.rs  kb.rs  lib.rs  main.rs  md1nf.rs  model.rs  parser.rs  parser2.rs  rules.rs  rules2.rs  rules3.rs  rules4.rs  signed.rs  tableau.rs  tableau2.rs  tb.rs  todo.txt  token.rs  transit.rs  translate.rs  tt.rs  util.rs
test/: test_st_0_d.txt  test_st_k_s5.txt
