[package]
name = "gradedmodal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
good_lp = { version = "1.14.0", features = ["scip", "scip_bundled"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
